# ai-for-talent

./: .env  .env.desktop  .env.desktop-dev  .env.desktop-pre  .env.desktop-prod  .env.desktop-test  .env.example  .env.pre  .env.production  .env.test  .gitignore  README.md  electron-builder.yml  index.html  package-lock.json  package.json  shell.config.example.json  shell.config.json  vite.config.js
.github/workflows/: deploy-by-tag.yml  deploy.yml  release.yml  rollback-previous.yml
docs/: tauri-shell-embed.md
electron/: launch.js  main.js  preload.js
scripts/: clean-electron-build.mjs  package-macos-dmg.sh  prepare-electron-build.mjs  render-macos-dmg-background.mjs  run-tauri.mjs  run-vite-env.mjs  scaffold-shell-app.mjs  validate-shell.mjs
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: http.js  index.js
src/api/modules/: dashboard.js  talent.js
src/apps/: index.js  manifest.js
src/apps/ai-for-talent/: index.js  route-names.js  routes.js
src/apps/starter/: StarterHome.vue  index.js  routes.js
src/assets/: base.css  main.css
src/components/: AppUpdateNotice.vue  StarfieldBackground.vue  TalentBg.vue
src/components/aiFortalent/: AgentInterviewChat.vue  AgentProfileAnalysis.vue  MatchingSearch.vue  RoleSelectPanel.vue  SceneQA.vue
src/config/: shell.js
src/layouts/: index.vue
src/router/: index.js  routes.js
src/utils/: desktop.js  echarts.js  runtime.js  talent.js
src/views/: NotFoundView.vue
(+15 files in other folders)
