[package]
name = "talentai"
version = "0.1.1"
description = "AI for Talent desktop application"
authors = ["yuanshu"]
edition = "2021"
publish = false

[features]
default = []
release-devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
